Review Comments: Address review comments